# proto/authentication_management_api.swagger.json
@@ -79,6 +79,38 @@
           "AuthService"
         ]
       }
+    },
+    "/signup": {
+      "post": {
+        "operationId": "AuthService_SignUp",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/authSignUpResponse"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/rpcStatus"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/authSignUpRequest"
+            }
+          }
+        ],
+        "tags": [
+          "AuthService"
+        ]
+      }
     }
   },
   "definitions": {
@@ -120,6 +152,28 @@
       "type": "object",
       "properties": {
         "newAccessToken": {
+          "type": "string"
+        }
+      }
+    },
+    "authSignUpRequest": {
+      "type": "object",
+      "properties": {
+        "fullName": {
+          "type": "string"
+        },
+        "email": {
+          "type": "string"
+        },
+        "password": {
+          "type": "string"
+        }
+      }
+    },
+    "authSignUpResponse": {
+      "type": "object",
+      "properties": {
+        "message": {
           "type": "string"
         }
       }
